# cidemo

./: .gitignore  README.md  justfile
.circleci/: config.yml
.github/workflows/: test copy.yaml  test.yaml
compute/: Cargo.toml
compute/src/: lib.rs
frontend/: .gitignore  README.md  bun.lockb  index.tsx  package.json
frontend/public/: index.html  style.css
frontend/src/: App.test.tsx  App.tsx  index.tsx
py/: README.md  pyproject.toml  test_main.py
py/cidemo/: main.py
py/cidemo_py/: main.py
py/tests/: test_main.py
rs/: Cargo.toml
rs/src/: lib.rs  main.rs
server/: pyproject.toml
server/server/: __main__.py  fib.py  server.py
server/tests/: test_fib.py
test/: bun.lockb  e2e.test.ts  package.json
