[tool.poetry]
name = "cidemo"
version = "0.1.0"
description = ""
authors = ["Elia Perantoni <perantonielia0@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
