[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Elia Perantoni <perantonielia0@gmail.com>"]
include = ["lib/__init__.py", "lib/compute.so", "lib/frontend/**/*"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
